--- a/webserviceapi/webserviceapi/pom.xml
+++ b/webserviceapi/webserviceapi/pom.xml
@@ -60,6 +60,16 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
 	</dependencies>
 
 	<build>
