--- a/fe-gui/package.json
+++ b/fe-gui/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@types/leaflet": "^1.5.19",
+    "@types/mapbox-gl-leaflet": "0.0.1",
+    "leaflet": "^1.7.1",
+    "mapbox-gl": "^1.12.0",
+    "mapbox-gl-leaflet": "0.0.13",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
